tests/baselines/reference/OverloadResolutionOnDefaultConstructor1.errors.txt
==== tests/cases/compiler/overloadResolutionOnDefaultConstructor1.ts (2 errors) ====
    class Bar {
        public clone() {
            return new Bar(0);
                       ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
                       ~~~
!!! error TS2085: Could not select overload for 'new' expression.
        }
    }